--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/context-create/context-create.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/context-create/context-create.component.html
@@ -1,14 +1,12 @@
 <nb-card id="modal-wrapper">
-  <nb-card-header class="d-flex justify-content-between align-items-center">
-    <h4>Create a new context</h4>
-
+  <nb-card-header class="d-flex justify-content-between align-items-start gap-1">
+    Create a new context
     <button
       nbButton
       ghost
       shape="round"
       nbTooltip="Cancel"
       (click)="cancel()"
-      class="ml-3"
     >
       <nb-icon icon="close-outline"></nb-icon>
     </button>
@@ -19,41 +17,34 @@
       [formGroup]="form"
       (submit)="save()"
     >
-      <div class="row main-row">
-        <div class="col-12">
-          <div class="mb-4">
-            <tock-form-control
-              label="Name"
-              name="name"
-              required="true"
-              [controls]="name"
-              [showError]="isSubmitted"
-            >
-              <input
-                nbInput
-                formControlName="name"
-                fullWidth
-                id="name"
-                type="text"
-                placeholder="Enter new context name"
-                (blur)="formatContextName()"
-                autofocusElement
-                data-testid="name"
-              />
-            </tock-form-control>
-          </div>
-        </div>
-      </div>
+      <tock-form-control
+        label="Name"
+        name="name"
+        required="true"
+        [controls]="name"
+        [showError]="isSubmitted"
+        [hasMargin]="false"
+      >
+        <input
+          nbInput
+          formControlName="name"
+          fullWidth
+          id="name"
+          type="text"
+          placeholder="Enter new context name"
+          (blur)="formatContextName()"
+          autofocusElement
+          data-testid="name"
+        />
+      </tock-form-control>
     </form>
   </nb-card-body>
 
-  <nb-card-footer class="d-flex justify-content-between">
+  <nb-card-footer class="card-footer-actions">
     <button
       nbButton
+      ghost
       size="small"
-      status="primary"
-      outline
-      class="m-1"
       (click)="cancel()"
     >
       Cancel
@@ -63,11 +54,9 @@
       nbButton
       size="small"
       status="primary"
-      class="m-1"
       (click)="save()"
       [disabled]="!canSave"
     >
-      <nb-icon icon="save-outline"></nb-icon>
       Save
     </button>
   </nb-card-footer>
