--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-create/intent-create.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-create/intent-create.component.html
@@ -1,9 +1,10 @@
 <nb-card id="modal-wrapper">
-  <nb-card-header class="d-flex justify-content-between align-items-start">
+  <nb-card-header class="d-flex justify-content-between align-items-start gap-1">
     <div>
-      <h4>Create a new intent</h4>
-      There is no existing intention corresponding to the label "{{ item.text }}". Please define one
-      below.
+      Create a new intent
+      <div class="card-header-subtitle">
+        There is no existing intent corresponding to the label "{{ item.text }}". Please define one below.
+      </div>
     </div>
     <button
       nbButton
@@ -11,7 +12,6 @@
       shape="round"
       nbTooltip="Cancel"
       (click)="cancel()"
-      class="ml-3"
     >
       <nb-icon icon="close-outline"></nb-icon>
     </button>
@@ -92,12 +92,13 @@
         </tock-form-control>
       </div>
 
-      <div class="d-flex flex-column mb-2">
+      <div class="d-flex flex-column">
         <tock-form-control
           label="Description"
           name="description"
           [controls]="description"
           [showError]="isSubmitted"
+          [hasMargin]="false"
         >
           <textarea
             nbInput
@@ -109,28 +110,27 @@
           ></textarea>
         </tock-form-control>
       </div>
-
-      <div class="grid-button mt-4">
-        <button
-          nbButton
-          outline
-          status="primary"
-          size="small"
-          type="button"
-          (click)="cancel()"
-        >
-          Cancel
-        </button>
-        <button
-          nbButton
-          status="primary"
-          size="small"
-          type="submit"
-          [disabled]="!canSave"
-        >
-          Save
-        </button>
-      </div>
     </form>
   </nb-card-body>
+  <nb-card-footer class="card-footer-actions">
+    <button
+      nbButton
+      ghost
+      size="small"
+      type="button"
+      (click)="cancel()"
+    >
+      Cancel
+    </button>
+    <button
+      nbButton
+      status="primary"
+      size="small"
+      type="submit"
+      [disabled]="!canSave"
+      (click)="save()"
+    >
+      Save
+    </button>
+  </nb-card-footer>
 </nb-card>
