--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/scenario-production.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/scenario-production.component.scss
@@ -39,9 +39,7 @@
     overflow: auto;
     padding: var(--panel-padding);
     display: grid;
-    grid-template-columns: minmax(var(--panel-with), 1fr) auto minmax(var(--panel-with), 1fr) auto var(
-        --panel-with
-      );
+    grid-template-columns: minmax(var(--panel-with), 1fr) auto minmax(var(--panel-with), 1fr) auto var(--panel-with);
     grid-template-rows: var(--panel-with);
     grid-gap: 0.5rem;
     box-shadow: inset 2px 2px 5px rgb(0 0 0 / 10%);
@@ -64,6 +62,8 @@
 @include nb-install-component {
   .production-wrapper {
     .production-menu {
+      @include nb-scrollbars(nb-theme(card-scrollbar-color), nb-theme(card-scrollbar-background-color), nb-theme(card-scrollbar-width));
+
       .intents-wrapper strong,
       .intents-list,
       .actions-wrapper strong,
@@ -80,6 +80,8 @@
 
         .intents-list,
         .actions-list {
+          @include nb-scrollbars(nb-theme(card-scrollbar-color), nb-theme(card-scrollbar-background-color), nb-theme(card-scrollbar-width));
+
           overflow: auto;
           font-size: 0.8rem;
           scrollbar-gutter: stable;
@@ -153,26 +155,5 @@
         }
       }
     }
-  }
-
-  .production-menu::-webkit-scrollbar,
-  .actions-list::-webkit-scrollbar,
-  .intents-list::-webkit-scrollbar {
-    width: nb-theme(scrollbar-width);
-    height: nb-theme(scrollbar-width);
-  }
-
-  .production-menu::-webkit-scrollbar-thumb,
-  .actions-list::-webkit-scrollbar-thumb,
-  .intents-list::-webkit-scrollbar-thumb {
-    background: nb-theme(scrollbar-color);
-    cursor: pointer;
-    border-radius: calc(nb-theme(scrollbar-width) / 2);
-  }
-
-  .production-menu::-webkit-scrollbar-track,
-  .actions-list::-webkit-scrollbar-track,
-  .intents-list::-webkit-scrollbar-track {
-    background: nb-theme(scrollbar-background-color);
   }
 }
