--- a/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.html
@@ -6,20 +6,18 @@
     class="side-panel"
     [nbSpinner]="loading"
   >
-    <nb-card-header>
-      <div class="d-flex justify-content-between align-items-start">
-        <h4>{{ scenario?.id ? 'Edit "' + scenario.name + '"' : 'New scenario' }}</h4>
-        <button
-          nbButton
-          ghost
-          shape="round"
-          nbTooltip="Close"
-          type="button"
-          (click)="close()"
-        >
-          <nb-icon icon="close-outline"></nb-icon>
-        </button>
-      </div>
+    <nb-card-header class="d-flex justify-content-between align-items-start">
+      {{ scenario?.id ? 'Edit "' + scenario.name + '"' : 'New scenario' }}
+      <button
+        nbButton
+        ghost
+        shape="round"
+        nbTooltip="Close"
+        type="button"
+        (click)="close()"
+      >
+        <nb-icon icon="close-outline"></nb-icon>
+      </button>
     </nb-card-header>
 
     <nb-card-body>
@@ -89,6 +87,7 @@
         name="tags"
         [controls]="tags"
         [showError]="isSubmitted"
+        [hasMargin]="false"
       >
         <nb-tag-list
           tock-delay
@@ -123,38 +122,35 @@
       </tock-form-control>
     </nb-card-body>
 
-    <nb-card-footer>
-      <div class="grid-button">
-        <button
-          nbButton
-          outline
-          status="primary"
-          size="small"
-          type="button"
-          (click)="close()"
-        >
-          Cancel
-        </button>
-        <button
-          nbButton
-          status="primary"
-          size="small"
-          type="submit"
-          [disabled]="!canSave"
-        >
-          Save
-        </button>
-        <button
-          nbButton
-          status="primary"
-          size="small"
-          type="button"
-          [disabled]="!canSave"
-          (click)="save(true)"
-        >
-          Save & design
-        </button>
-      </div>
+    <nb-card-footer class="card-footer-actions">
+      <button
+        nbButton
+        ghost
+        size="small"
+        type="button"
+        (click)="close()"
+      >
+        Cancel
+      </button>
+      <button
+        nbButton
+        status="primary"
+        size="small"
+        type="submit"
+        [disabled]="!canSave"
+      >
+        Save
+      </button>
+      <button
+        nbButton
+        status="primary"
+        size="small"
+        type="button"
+        [disabled]="!canSave"
+        (click)="save(true)"
+      >
+        Save & design
+      </button>
     </nb-card-footer>
   </nb-card>
 </form>
