--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-filters/scenario-filters.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-filters/scenario-filters.component.scss
@@ -1,15 +1,5 @@
 .grid {
   display: grid;
   grid-gap: 1rem;
-  grid-template-columns: 100%;
-}
-
-@media screen and (min-width: 576px) {
-  .grid {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-
-    .actions {
-      justify-self: end;
-    }
-  }
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
 }
