--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.scss
@@ -5,24 +5,43 @@
 .grid-columns {
   display: grid;
   grid-gap: 1rem;
-  grid-template-columns: 100%;
+  grid-template-columns: 1fr;
   width: 100%;
   margin-right: 1.5rem;
+
+  &-header {
+    font-size: nb-theme(text-label-font-size);
+    color: nb-theme(color-basic-600);
+    padding: 0 2.75rem 0 1.25rem;
+  }
 }
 
-.grid-columns-header {
-  font-size: nb-theme(text-label-font-size);
-  color: nb-theme(color-basic-600);
-  padding: 0 2.5rem 0 1.5rem;
+.grid-accordion-item-body {
+  display: grid;
+  grid-template-columns: 1fr;
+
+  &:not(:first-child) {
+    padding-top: 1rem;
+  }
+
+  &:not(:last-child) {
+    border-bottom: 1px solid nb-theme(color-basic-transparent-200);
+    padding-bottom: 1rem;
+  }
+
+  &-header {
+    font-size: nb-theme(text-label-font-size);
+    color: nb-theme(color-basic-600);
+  }
 }
 
 @include media-breakpoint-up(md) {
   .grid-columns {
-    grid-template-columns: minmax(0, 4fr) minmax(0, 1fr) minmax(0, 2fr) minmax(0, 1fr);
+    grid-template-columns: minmax(5rem, 4fr) minmax(5rem, 1fr) minmax(5rem, 2fr) minmax(5rem, auto);
   }
 
-  .actions {
-    text-align: right;
+  .grid-accordion-item-body {
+    grid-template-columns: minmax(5rem, 1fr) minmax(5rem, 1fr) minmax(5rem, 1fr) minmax(5rem, 4fr) minmax(10rem, auto);
   }
 }
 
