--- a/bot/admin/web/src/app/shared/form-control/form-control.component.html
+++ b/bot/admin/web/src/app/shared/form-control/form-control.component.html
@@ -1,4 +1,7 @@
-<div class="d-flex flex-column mb-3">
+<div
+  class="d-flex flex-column"
+  [class.mb-3]="hasMargin"
+>
   <label
     *ngIf="label"
     [class.required]="required"
