--- a/bot/admin/web/src/app/shared/json-previewer/json-previewer.component.html
+++ b/bot/admin/web/src/app/shared/json-previewer/json-previewer.component.html
@@ -1,7 +1,7 @@
 <nb-card class="m-0">
   <nb-card-header>
-    <div class="d-flex justify-content-between align-items-start">
-      <h4>{{ title }}</h4>
+    <div class="d-flex justify-content-between align-items-start gap-1">
+      {{ title }}
       <button
         nbButton
         ghost
