--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-publishing/scenario-publishing.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-publishing/scenario-publishing.component.html
@@ -1,13 +1,13 @@
 <nb-card>
   <nb-card-body>
     <div *ngIf="dependencies">
-      <ng-container
-        *ngFor="let intentJobsType of [dependencies.intentsToCreate, dependencies.intentsToUpdate]"
-      >
+      <ng-container *ngFor="let intentJobsType of [dependencies.intentsToCreate, dependencies.intentsToUpdate]">
         <div *ngIf="intentJobsType.length">
           <h5>
-            The <span *ngIf="intentJobsType.length > 1">{{ intentJobsType.length }}</span> following
-            intent<span *ngIf="intentJobsType.length > 1">s</span>
+            The <span *ngIf="intentJobsType.length > 1">{{ intentJobsType.length }}</span> following intent<span
+              *ngIf="intentJobsType.length > 1"
+              >s</span
+            >
 
             <span *ngIf="!areAllJobsTypeDone(intentJobsType)"> will be </span>
             <span *ngIf="areAllJobsTypeDone(intentJobsType)"> have been </span>
@@ -51,16 +51,16 @@
         </div>
       </ng-container>
 
-      <ng-container
-        *ngFor="let answerJobsType of [dependencies.answersToCreate, dependencies.answersToUpdate]"
-      >
+      <ng-container *ngFor="let answerJobsType of [dependencies.answersToCreate, dependencies.answersToUpdate]">
         <div
           *ngIf="answerJobsType.length"
           class="mt-3"
         >
           <h5>
-            The <span *ngIf="answerJobsType.length > 1">{{ answerJobsType.length }}</span> following
-            answer<span *ngIf="answerJobsType.length > 1">s</span>
+            The <span *ngIf="answerJobsType.length > 1">{{ answerJobsType.length }}</span> following answer<span
+              *ngIf="answerJobsType.length > 1"
+              >s</span
+            >
 
             <span *ngIf="!areAllJobsTypeDone(answerJobsType)"> will be </span>
             <span *ngIf="areAllJobsTypeDone(answerJobsType)"> have been </span>
@@ -92,7 +92,6 @@
         <button
           nbButton
           status="danger"
-          class="ml-2"
           (click)="processDependencies()"
         >
           Publish scenario
