--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.scss
@@ -40,7 +40,7 @@ section {
 
 @include media-breakpoint-up(lg) {
   .grid {
-    grid-template-columns: 6fr 4fr;
+    grid-template-columns: 6fr minmax(15rem, 4fr);
 
     .main {
       order: 1;
