--- a/bot/admin/web/src/app/scenarios/scenario-designer/mode-stepper/mode-stepper.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/mode-stepper/mode-stepper.component.html
@@ -1,90 +1,25 @@
-<div
-  class="step valid"
-  [ngClass]="{
-    selected: mode === SCENARIO_MODE.writing
-  }"
-  (click)="switchMode(SCENARIO_MODE.writing)"
-  data-testid="step-ctrl-writing"
->
-  <div class="label-index">
-    <nb-icon icon="edit-outline"></nb-icon>
-  </div>
-  <div class="label">
-    <span>Writing</span>
-  </div>
-</div>
-
-<div
-  class="connector"
-  [class.connectorpassed]="isStepPassed(SCENARIO_MODE.writing)"
->
-  <div class="line"></div>
-  <div class="arrow"></div>
-</div>
-
-<div
-  class="step"
-  [ngClass]="{
-    valid: isStepSequenceValid(SCENARIO_MODE.casting),
-    selected: mode === SCENARIO_MODE.casting
-  }"
-  (click)="switchMode(SCENARIO_MODE.casting)"
-  data-testid="step-ctrl-casting"
->
-  <div class="label-index">
-    <nb-icon icon="people-outline"></nb-icon>
-  </div>
-  <div class="label">
-    <span>Casting</span>
-  </div>
-</div>
-
-<div
-  class="connector"
-  [class.connectorpassed]="isStepPassed(SCENARIO_MODE.casting)"
->
-  <div class="line"></div>
-  <div class="arrow"></div>
-</div>
-
-<div
-  class="step"
-  [ngClass]="{
-    valid: isStepSequenceValid(SCENARIO_MODE.production),
-    selected: mode === SCENARIO_MODE.production
-  }"
-  (click)="switchMode(SCENARIO_MODE.production)"
-  data-testid="step-ctrl-production"
->
-  <div class="label-index">
-    <nb-icon icon="video-outline"></nb-icon>
-  </div>
-  <div class="label">
-    <span>Production</span>
-  </div>
-</div>
-
-<div
-  class="connector"
-  [class.connectorpassed]="isStepPassed(SCENARIO_MODE.production)"
->
-  <div class="line"></div>
-  <div class="arrow"></div>
-</div>
-
-<div
-  class="step"
-  [ngClass]="{
-    valid: isStepSequenceValid(SCENARIO_MODE.publishing),
-    selected: mode === SCENARIO_MODE.publishing
-  }"
-  (click)="switchMode(SCENARIO_MODE.publishing)"
-  data-testid="step-ctrl-publishing"
->
-  <div class="label-index">
-    <nb-icon icon="film-outline"></nb-icon>
-  </div>
-  <div class="label">
-    <span>Publishing</span>
+<div *ngFor="let step of steps; let i = index; let f = first; let l = last">
+  <button
+    nbButton
+    ghost
+    size="small"
+    shape="round"
+    class="step"
+    [ngClass]="{ valid: f || isStepSequenceValid(step.mode), selected: mode === step.mode }"
+    (click)="switchMode(step.mode)"
+    [attr.data-testid]="'step-ctrl-' + step.mode"
+  >
+    <div class="label-index">
+      <nb-icon [icon]="step.icon"></nb-icon>
+    </div>
+    <span class="label">{{ step.label }}</span>
+  </button>
+  <div
+    *ngIf="!l"
+    class="connector"
+    [class.connectorpassed]="isStepPassed(step.mode)"
+  >
+    <div class="line"></div>
+    <div class="arrow"></div>
   </div>
 </div>
