--- a/bot/admin/web/src/app/scenarios/scenario-designer/mode-stepper/mode-stepper.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/mode-stepper/mode-stepper.component.scss
@@ -1,83 +1,86 @@
+@import '~@nebular/theme/styles/theming';
+@import '~@nebular/theme/styles/themes';
+
 :host {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+
+  > div {
+    display: flex;
+
+    &:not(:last-child) {
+      flex: 1;
+    }
+  }
 
   .step {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
     .label-index {
       display: flex;
       justify-content: center;
       align-items: center;
-
       margin-right: 10px;
-      color: #8f9bb3;
+      color: nb-theme(color-basic-600);
       border-radius: 50%;
-      border-color: #ddd;
-      border-style: solid;
-      border-width: 1px;
+      border: 1px solid nb-theme(color-basic-600);
       min-width: 2rem;
       width: 2rem;
       height: 2rem;
     }
+
     .label {
-      width: max-content;
-      color: #8f9bb3;
-      font-family: Open Sans, sans-serif;
-      font-size: 0.75rem;
-      font-weight: 700;
-      line-height: 1rem;
+      color: nb-theme(color-basic-transparent-focus-border);
     }
 
     &.valid {
       .label-index {
-        border-color: #274bdb;
-        color: #274bdb;
+        border-color: nb-theme(color-primary-active);
+        color: nb-theme(color-primary-active);
       }
       .label {
-        color: #274bdb;
+        color: nb-theme(color-primary-active);
       }
     }
 
     &.selected {
       .label-index {
-        border-color: #274bdb;
-        background-color: #274bdb;
-        color: white;
+        border-color: nb-theme(color-primary-active);
+        background-color: nb-theme(color-primary-active);
+        color: nb-theme(text-control-color);
       }
       .label {
-        color: #274bdb;
+        color: nb-theme(color-primary-active);
       }
     }
   }
+
   .connector {
     margin: 1rem;
     display: flex;
     align-items: center;
     flex: auto;
+
     .line {
       height: 1px;
-      background-color: #ddd;
+      background-color: nb-theme(color-basic-600);
       flex: auto;
     }
+
     .arrow {
       display: inline-block;
-      border: solid #ddd;
+      border: solid nb-theme(color-basic-600);
       border-width: 0 1px 1px 0;
       padding: 3px;
       margin-left: -6px;
       transform: rotate(-45deg);
-      -webkit-transform: rotate(-45deg);
     }
   }
+
   .connectorpassed {
     .line {
-      background-color: #3366ff;
+      background-color: nb-theme(color-primary-default);
     }
     .arrow {
-      border-color: #3366ff;
+      border-color: nb-theme(color-primary-default);
     }
   }
 }
