--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/action-edit/action-edit.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/action-edit/action-edit.component.scss
@@ -3,7 +3,7 @@
 @import '~@nebular/theme/styles/themes';
 
 :host nb-card {
-  max-height: nb-theme(card-height-large);
+  max-height: nb-theme(card-height-giant);
 }
 
 @include nb-install-component {
