🎨(scenarios|shared): format the code with prettier

--- a/bot/admin/web/src/app/shared/error-helper/error-helper.component.html
+++ b/bot/admin/web/src/app/shared/error-helper/error-helper.component.html
@@ -3,9 +3,7 @@
   <small *ngIf="field?.errors?.minlength">
     This field must contain at least {{ field?.errors?.minlength.requiredLength }} characters
   </small>
-  <small *ngIf="field?.errors?.maxlength">
-    This field is limited to {{ field?.errors?.maxlength.requiredLength }} characters
-  </small>
+  <small *ngIf="field?.errors?.maxlength"> This field is limited to {{ field?.errors?.maxlength.requiredLength }} characters </small>
   <small *ngIf="field?.errors?.filesNameWithWrongType">
     The following files are not accepted file types:
     <ul>
