--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception-item.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception-item.component.html
@@ -40,9 +40,7 @@
       />
       <img
         src="assets/images/scenario-client.svg"
-        *ngIf="
-          item.from != SCENARIO_ITEM_FROM_CLIENT && mode == SCENARIO_MODE.writing && !isReadonly
-        "
+        *ngIf="item.from != SCENARIO_ITEM_FROM_CLIENT && mode == SCENARIO_MODE.writing && !isReadonly"
       />
       <div
         class="duplication-count"
@@ -172,12 +170,7 @@
             nbButton
             size="tiny"
             status="info"
-            *ngIf="
-              mode == SCENARIO_MODE.writing &&
-              itemCanHaveAnswer() &&
-              item.from === SCENARIO_ITEM_FROM_CLIENT &&
-              !isReadonly
-            "
+            *ngIf="mode == SCENARIO_MODE.writing && itemCanHaveAnswer() && item.from === SCENARIO_ITEM_FROM_CLIENT && !isReadonly"
             (click)="answering()"
             nbTooltip="Add a bot intervention"
             style="padding-left: 5px"
@@ -194,12 +187,7 @@
             nbButton
             size="tiny"
             status="info"
-            *ngIf="
-              mode == SCENARIO_MODE.writing &&
-              itemCanHaveAnswer() &&
-              item.from === SCENARIO_ITEM_FROM_BOT &&
-              !isReadonly
-            "
+            *ngIf="mode == SCENARIO_MODE.writing && itemCanHaveAnswer() && item.from === SCENARIO_ITEM_FROM_BOT && !isReadonly"
             (click)="answering()"
             nbTooltip="Add a client intervention"
             style="padding-left: 5px"
@@ -216,12 +204,7 @@
             nbButton
             size="tiny"
             status="info"
-            *ngIf="
-              mode == SCENARIO_MODE.casting &&
-              item.from == SCENARIO_ITEM_FROM_CLIENT &&
-              item.text?.length &&
-              !isReadonly
-            "
+            *ngIf="mode == SCENARIO_MODE.casting && item.from == SCENARIO_ITEM_FROM_CLIENT && item.text?.length && !isReadonly"
             (click)="manageIntent()"
             nbTooltip="Intent infos and edition"
             data-testid="item-define-intent"
@@ -233,12 +216,7 @@
             nbButton
             size="tiny"
             status="info"
-            *ngIf="
-              mode == SCENARIO_MODE.casting &&
-              item.from == SCENARIO_ITEM_FROM_BOT &&
-              item.text?.length &&
-              !isReadonly
-            "
+            *ngIf="mode == SCENARIO_MODE.casting && item.from == SCENARIO_ITEM_FROM_BOT && item.text?.length && !isReadonly"
             (click)="manageAction()"
             nbTooltip="Action infos and edition"
             data-testid="item-define-action"
@@ -261,9 +239,7 @@
             nbButton
             size="tiny"
             status="warning"
-            *ngIf="
-              mode == SCENARIO_MODE.writing && item.id > 0 && itemHasNoChildren() && !isReadonly
-            "
+            *ngIf="mode == SCENARIO_MODE.writing && item.id > 0 && itemHasNoChildren() && !isReadonly"
             (click)="delete()"
             nbTooltip="Remove this item"
             data-testid="item-delete"
