--- a/bot/admin/web/src/app/shared/canvas/bottom-actions/bottom-actions.component.scss
+++ b/bot/admin/web/src/app/shared/canvas/bottom-actions/bottom-actions.component.scss
@@ -5,7 +5,6 @@
   z-index: 10;
 
   nb-button-group {
-    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12),
-      0 2px 4px -1px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
   }
 }
